[package]
name = "day10"
version = "0.1.0"
edition = "2021"

[dependencies]
memchr = "2.7.4"
link-cplusplus = "1.0"

[dev-dependencies]
criterion = "0.5.1"
divan = "0.1.14"
cmake = "0.1.45"

[build-dependencies]
cmake = "0.1.45"

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "divan"
harness = false
