[package]
name = "day10"
version = "0.1.0"
edition = "2021"

[dependencies]
memchr = "2.7"
link-cplusplus = "1"

[target.'cfg(target_os = "macos")'.dependencies]
swift-rs = "1.0.5"

[dev-dependencies]
criterion = "0.5.0"
divan = "0.1.0"

[build-dependencies]
cmake = "0.1.0"

[target.'cfg(target_os = "macos")'.build-dependencies]
swift-rs = { version = "1.0.5", features = ["build"] }

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "divan"
harness = false
